<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding = "20dp"
    tools:context = "hu.bme.aut.silentmap2_1_0.view.viewmodel.CreateAndEditAlarmViewModel">

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_alarm_starting_time"
        android:textColor="@color/main_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/secondary_text_color"
        app:layout_constraintStart_toStartOf="@+id/tvStartTime"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="141dp"
        android:layout_marginTop="4dp"
        android:theme="@style/timePickerSecondary"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_alarm_end_time"
        android:textColor="@color/main_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimePicker" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/main_text_color"
        app:layout_constraintStart_toStartOf="@+id/tvEndTime"
        app:layout_constraintTop_toBottomOf="@+id/tvEndTime" />

    <TimePicker
        android:id="@+id/endTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="141dp"
        android:layout_marginTop="4dp"
        android:theme="@style/timePickerSecondary"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEndTime"
        />

    <TextView
        android:id="@+id/tvRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_alarm_repeat"
        android:textColor="@color/main_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimePicker" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/secondary_text_color"
        app:layout_constraintStart_toStartOf="@+id/tvRepeat"
        app:layout_constraintTop_toBottomOf="@+id/tvRepeat" />

    <LinearLayout
        android:id="@+id/repeatPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/endTimePicker"
        app:layout_constraintTop_toBottomOf="@+id/tvRepeat">

        <CheckBox
            android:id="@+id/checkboxMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/monday"
            android:theme = "@style/checkboxTheme"/>

        <CheckBox
            android:id="@+id/checkboxTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/tuesday"
            android:theme = "@style/checkboxTheme"/>
        <CheckBox
            android:id="@+id/checkboxWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/wednesday"
            android:theme = "@style/checkboxTheme"/>
        <CheckBox
            android:id="@+id/checkboxThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/thursday"
            android:theme = "@style/checkboxTheme"/>
        <CheckBox
            android:id="@+id/checkboxFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/friday"
            android:theme = "@style/checkboxTheme"/>
        <CheckBox
            android:id="@+id/checkboxSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/saturday"
            android:theme = "@style/checkboxTheme"/>
        <CheckBox
            android:id="@+id/checkboxSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            android:text="@string/sunday"
            android:theme = "@style/checkboxTheme"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPicker">

        <Button
            android:id="@+id/bAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_main_button"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_secondary_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="16sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>