<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/transparent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardElevation="0dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingTop="20dp"
        app:contentPaddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/transparent"
        android:backgroundTint="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            android:padding="16dp">

            <ImageView
                android:id="@+id/alarmImage"
                android:layout_width="79dp"
                android:layout_height="77dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_alarm_24" />

            <LinearLayout
                android:id="@+id/Start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/End"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarmImage"
                android:layout_marginTop="16dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/alarm_card_start"
                    android:textColor="@color/main_text_color"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/card_alarm_time"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="16sp"
                    android:layout_weight="2"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/End"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/Start"
                app:layout_constraintStart_toStartOf="@+id/Start"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/card_alarm_end"
                    android:textColor="@color/main_text_color"
                    android:textSize="16sp"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/card_alarm_time"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="16sp"
                    android:layout_weight="2"/>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>